fix bugs on mobile

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
     body section .contact_link {
       position: relative;
       left: 8%;
-      top: 10px;
+      top: 20px;
       bottom: 0%; }
       body section .contact_link a i {
         width: 60px;
@@ -120,7 +120,7 @@ body {
     body .projects .recent-line {
       display: none; }
     body .projects .recent_works h3 {
-      width: 327px;
+      width: 100%;
       height: 83px;
       padding-left: 24px;
       margin-top: 120px;
